--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 <script>
   // Your Firebase config
   const firebaseConfig = {
-  apiKey: "AIzaSyCFOc0fMXO6bOlLn59wrJQSghJZlvS1eSY",
+   apiKey: "AIzaSyCFOc0fMXO6bOlLn59wrJQSghJZlvS1eSY",
   authDomain: "global-connection-8a3c8.firebaseapp.com",
+  databaseURL: "https://global-connection-8a3c8-default-rtdb.asia-southeast1.firebasedatabase.app",
   projectId: "global-connection-8a3c8",
   storageBucket: "global-connection-8a3c8.firebasestorage.app",
   messagingSenderId: "724892982395",
   appId: "1:724892982395:web:b31c7dfcfc14987a9d96de",
+  measurementId: "G-10RKFKXTQ0"
   };
 
   // Initialize Firebase
